	before processing a chuunk. Also, fix the parentheses so that the
	unwind protect cleanup forms are actually in the cleanup section.
	In openmcl, where apparently communication with slime is done in
	2k chunks, you can trigger the bug with something like this:
	(swank::presenting-object 'foo t 
	  (dotimes (i 2040) (write-char	#\:)))

2005-09-07  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* present.lisp (menu-choices-for-presentation): The
	Inspect/Describe/Copy items are now provided from the Emacs side.
	Implement all pathname menu items without having Emacs evaluate a
	form.  Fix for Lisps where ".lisp" is parsed as :name ".lisp". 

	* slime.el (slime-menu-choices-for-presentation): New function,
	return a menu with Inspect/Describe/Copy plus the items that come
	from the menu protocol.
	(slime-presentation-menu): Security improvement for the
	presentation menu protocol: Don't eval arbitrary forms coming from
	the Lisp.  Minor cleanup: Use x-popup-menu in the normal Emacs way,
	associating a command with each menu item.

2005-09-05  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (background-message): New function. Forward the
	call to the front end.
	(pre-gc-hook, post-gc-hook): Use it.
	(swank-sym, sending-safe-p): Deleted.

	* swank.lisp (y-or-n-p-in-emacs): Simplify arglist.
	(evaluate-in-emacs, dispatch-event, send-to-socket-io): Remove
	evaluate-in-emacs stuff.
	(to-string): Undo last change. to-string is not to supposed to
	ignore errors.  Bind *print-readably* instead.
	(background-message): New function.
	(symbol-external-p): Simplify it a little.

	* slime.el (slime-setup-command-hooks): Add after-change-functions
	only if presentations are enabled.
	(slime-dispatch-event, slime-enable-evaluate-in-emacs)
	(evaluate-in-emacs): Remove evaluate-in-emacs stuff.  It was not
	used and redundant.
	(slime-save-some-lisp-buffers): Renamed from
	save-some-lisp-buffers.
	(slime-choose-overlay-region): Ignore :source-form locations.